WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159531
REGRESSION (
r196321
): Adobe Reader DC + Safari : Zoom level pulldown is not displayed at the correct position
https://bugs.webkit.org/show_bug.cgi?id=159531
Summary
REGRESSION (r196321): Adobe Reader DC + Safari : Zoom level pulldown is not d...
Anders Carlsson
Reported
2016-07-07 15:42:28 PDT
REGRESSION (
r196321
): Adobe Reader DC + Safari : Zoom level pulldown is not displayed at the correct position
Attachments
Patch
(7.94 KB, patch)
2016-07-07 15:47 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-07-07 15:47:46 PDT
Created
attachment 283070
[details]
Patch
Anders Carlsson
Comment 2
2016-07-08 11:53:09 PDT
Committed
r202998
: <
http://trac.webkit.org/changeset/202998
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug